tests/ui/consts/required-consts/interpret-in-promoted.noopt.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/interpret-in-promoted.rs:13:28
   |
LL |     let _x: &'static () = &ub();
   |                            ^^^^ entering unreachable code
   |
note: inside `ub`
  --> $DIR/interpret-in-promoted.rs:7:5
   |
LL |     std::hint::unreachable_unchecked();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `unreachable_unchecked`
  --> $SRC_DIR/core/src/hint.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/interpret-in-promoted.rs:13:27
   |
LL |     let _x: &'static () = &ub();
   |                           ^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
